# Multi-Agent-Financial-Complaint-System

./: .env.example  .gitignore  DB_access.py  Dockerfile  README.md  architecture.md  docker-compose.yml  file_chunker.py  generate_repository_architecture_detailed_pdf.py  generate_repository_architecture_pdf.py  main.py  pyproject.toml  repository_architecture.md  repository_architecture_detailed.md  requirements.txt  testing.ipynb  testing_sample.py
app/: debug_voice_log.py  env_elevenlabs.py
app/agents/: __init__.py  classification.py  classification_context.py  classification_deterministic.py  classification_plan_rules.py  compliance.py  intake.py  intake_engine.py  llm_factory.py  resolution.py  review.py  risk.py  root_cause.py  routing.py  supervisor.py  tool_loop.py  tools.py
app/api/: elevenlabs_intake.py  routes.py
app/db/: __init__.py  models.py  session.py
app/evals/: __init__.py  judge.py  run_evals.py  service.py
app/integrations/: __init__.py  jira_client.py
app/knowledge/: __init__.py  company_knowledge.py  mock_company_pack.py
app/knowledge_base/: __init__.py  bootstrap.py  export.py  graph.py  models.py  schemas.py  source_inventory.py
app/observability/: backfill.py  context.py  cost.py  instrumentation.py  logging.py  persistence.py  versions.py
app/orchestrator/: state.py  workflow.py
app/prompts/: classification.md  classification_assess.md  (+2 more)
knowledge_base/: IMPLEMENTATION_PLAN.md  README.md
scripts/: backfill_cost_ledger.py  dev_https.sh
tests/: test_classification_pipeline.py  test_elevenlabs_intake.py  test_intake_engine.py
(+54 files in other folders)
